<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (c) VAP Communications Group, 2020
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fatal_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/ic_error"
                android:drawablePadding="@dimen/text_margin"
                android:gravity="center_vertical"
                android:text="@string/error_occurred"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:id="@+id/advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/what_to_do"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <Button
                android:id="@+id/more"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/more"
                android:textColor="@color/colorError" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/error_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/send_report"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</LinearLayout>
