<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (c) L-Tech LLC, 2019
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_error_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:drawableStart="@drawable/ic_error"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/request_error"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorTextDarkGray"
        />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:drawablePadding="@dimen/text_margin"

        android:text="@string/try_again"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/colorError"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/what_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/call_support"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <Button
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/report_an_error"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/colorError"
        />
</LinearLayout>