<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ (c) VAP Communications Group, 2020
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="online.vapcom.skyword.viewmodels.SearchViewModel" />

        <variable
            name="wordClickListener"
            type="android.view.View.OnClickListener"/>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:title="@string/app_name"
            app:layout_scrollFlags="scroll|enterAlways"
            >

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/word"
        style="@style/TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin_sm"
        android:hint="@string/enter_word"

        app:boxStrokeColor="@{viewModel.unknownWord ? @color/outlined_stroke_red_color : @color/outlined_stroke_color}"
        app:errorText="@{viewModel.unknownWord ? @string/word_not_found : null}"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/word_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/translate"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="64"
            android:text="@={viewModel.wordForSearch}"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/search"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/text_margin_sm"
        android:layout_marginEnd="@dimen/text_margin_sm"
        android:background="@android:color/transparent"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_arrow_right"
        android:enabled="@{viewModel.isDataValid}"
        android:tint="@{viewModel.isDataValid ? @color/colorPrimary : @color/colorTextFrameDisabled}"

        app:layout_constraintTop_toTopOf="@id/word"
        app:layout_constraintStart_toEndOf="@id/word"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/text_margin"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <!-- список найденных слов -->
        <LinearLayout
            android:id="@+id/found_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:entries="@{viewModel.foundWords}"
            app:layout="@{@layout/words_list_item}"
            app:entryClickListener="@{wordClickListener}"
            />

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:alpha="0.75"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <include
        layout="@layout/fatal_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/text_margin"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>